test/compile_errors/stage1/obj/reify_type_for_exhaustive_enum_with_non-integer_tag_type.zig
const Tag = @Type(.{
    .Enum = .{
        .layout = .Auto,
        .tag_type = bool,
        .fields = &.{},
        .decls = &.{},
        .is_exhaustive = false,
    },
});
export fn entry() void {
    _ = @intToEnum(Tag, 0);
}

// @Type for exhaustive enum with non-integer tag type
//
// tmp.zig:1:20: error: Type.Enum.tag_type must be an integer type, not 'bool'
